--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 			<a href="index.html">Home</a>
 			</li>
 			<li>
-			<a href="portfolio-item.html">Single Project</a>
+			<a href="portfolio-servicios.html">Servicios</a>
 			</li>
 			<li>
-			<a href="page-sample.html">Page Sample</a>
+			<a href="page-sample.html">Productos</a>
 			</li>
 			<li>
-			<a href="contact.html">Hire me</a>
+			<a href="contact.html">Contactenos</a>
 			</li>
 		</ul>
 	</div>
