Adicion de nuevas paginas

--- a/contact.html
+++ b/contact.html
@@ -30,22 +30,22 @@
 		<i class="fa fa-bars"></i>
 		</button>
 		<a class="navbar-brand page-scroll" href="index.html">
-		ARIES </a>
+		JMANUELCALVO </a>
 	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		<ul class="nav navbar-nav">
 			<li>
-			<a href="index.html">Home</a>
+			<a href="index.html">INICIO</a>
 			</li>
 			<li>
-			<a href="portfolio-item.html">Singe Project</a>
+			<a href="portfolio-item.html">SERVICIOS</a>
 			</li>
 			<li>
-			<a href="page-sample.html">Page Sample</a>
+			<a href="page-sample.html">PRODUCTOS</a>
 			</li>
 			<li>
-			<a href="contact.html">Hire me</a>
+			<a href="contact.html">CONTACTENOS</a>
 			</li>
 		</ul>
 	</div>
@@ -59,9 +59,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">Get in Touch</h1>
+				<h1 class="brand-heading">Mantengamonos en contacto</h1>
 				<p class="intro-text">
-					The contact form is Workin'!
+					Formulario de contacto
 				</p>
 				<a href="#contact" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
@@ -71,6 +71,51 @@
 	</div>
 </div>
 </header>
+
+
+
+<section id="page-sample">
+<div class="container content-section text-left">
+        <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                        <p>
+
+Certificaciones 
+
+Viñeta Red Hat Certifications
+
+Viñeta Novell Certified Administrator
+
+
+
+Blog
+
+Tips y solución a problemas en soluciones libres y virtualización
+
+Viñeta jmanuelcalvo.blogspot.com
+
+
+
+Social
+
+ViñetaLinkedin
+
+ViñetaFacebook
+
+ViñetaTwitter
+
+
+
+Fotografía
+
+ViñetaJmanuelcalvo Creative
+
+ViñetaFlickr
+
+                        <p>
+
+
+
 <!-- Contact Section -->
 <section id="contact">
 <div class="container content-section">
@@ -84,9 +129,9 @@
 			</div>
 			<form method="post" action="contact.php" id="contactform">
 				<div class="form">
-					<input type="text" name="name" placeholder="Your Name *">
-					<input type="text" name="email" placeholder="Your E-mail Address *">
-					<textarea name="comment" rows="7" placeholder="Type your Message *"></textarea>
+					<input type="text" name="name" placeholder="Su Nombre *">
+					<input type="text" name="email" placeholder="Su direccion de correo electronico *">
+					<textarea name="comment" rows="7" placeholder="Escriba su mensaje *"></textarea>
 					<input type="submit" id="submit" class="clearfix btn" value="Send">
 				</div>
 			</form>
