--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		<ul class="nav navbar-nav">
 			<li>
-			<a href="index.html">Home</a>
+			<a href="index.html">INICIO</a>
 			</li>
 			<li>
 			<a href="portfolio-servicios.html">Servicios</a>
 			</li>
 			<li>
-			<a href="page-sample.html">Productos</a>
+			<a href="pag-servios.html">Productos</a>
 			</li>
 			<li>
 			<a href="contact.html">Contactenos</a>
@@ -174,17 +174,17 @@ Excelente manejo de relaciones interpersonales, responsable y disciplinado, crea
 				 If you like "Aries" template, we'd love to hear from you, whether it be feedback, thanks, new template ideas or even just to say hello, we welcome it all!
 			</p>
 			<p>
-				<i><a href="mailto:wowthemesnet@gmail.com" style="border-bottom:1px dashed #ccc;">wowthemesnet@gmail.com</a></i>
+				<i><a href="mailto:jmanuelcalvo@gmail.com" style="border-bottom:1px dashed #ccc;">jmanuelcalvo@gmail.com</a></i>
 			</p>
 			<ul class="list-inline banner-social-buttons">
 				<li>
-				<a href="https://twitter.com/wowthemesnet" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
+				<a href="https://www.instagram.com/jmanuelcalvo/" class="btn btnghost btn-lg"><i class="fa fa-instagram fa-fw"></i><span class="network-name">Instagram</span></a>
 				</li>
 				<li>
-				<a href="https://www.facebook.com/pages/wowthemesnet/562560840468823" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
+				<a href="https://www.facebook.com/jmanuelcalvo" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
 				</li>
 				<li>
-				<a href="https://plus.google.com/u/0/b/110916582192388695332/110916582192388695332/posts" class="btn btnghost btn-lg"><i class="fa fa-google-plus fa-fw"></i><span class="network-name">Google+</span></a>
+				<a href="http://jmanuelcalvo.blogspot.com" class="btn btnghost btn-lg"><i class="fa fa-wordpress fa-fw"></i><span class="network-name">BlogSpot</span></a>
 				</li>
 			</ul>
 		</div>
