Cambio en el index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<i class="fa fa-bars"></i>
 		</button>
 		<a class="navbar-brand page-scroll" href="index.html">
-		JMANUELCALVO</a>
+		BBR</a>
 	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -60,7 +60,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">[JMANUELCALVO]#</h1>
+				<h1 class="brand-heading">[BBR]#</h1>
 				<p class="intro-text">
 Red Hat Architect | IT Consultant | Instructor/Examiner     <br> 
  Cloud Specialist | Photographer <br>
