--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">[BBR]#</h1>
+				<h1 class="brand-heading">[jmanuelcalvo]#</h1>
 				<p class="intro-text">
 Red Hat Architect | IT Consultant | Instructor/Examiner     <br> 
  Cloud Specialist | Photographer <br>
