--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="brand-heading">[jmanuelcalvo]#</h1>
 				<p class="intro-text">
-Red Hat Architect | IT Consultant | Instructor/Examiner     <br> 
+Red Hat Architect L V | IT Consultant | Instructor/Examiner     <br> 
  Cloud Specialist | Photographer <br>
 				</p>
 				<a href="#about" class="btn btn-circle page-scroll">
