--- a/portfolio-servicios.html
+++ b/portfolio-servicios.html
@@ -77,7 +77,7 @@
 <section id="single-project">
 <div class="container content-section text-center">
 	<div class="row">
-		<h2>Portal Alkosto</h2>
+		<h2>Portal </h2>
 		<div class="col-lg-8 col-lg-offset-2">
 			<p>
 En la actualidad las empresas cuentan con necesidades tecnológicas las cuales pueden ir desde una pagina web y correo electrónico para contar con presencia en Internet hasta soluciones de Inteligencia de Negocios. Contando con mas de 18 años de experiencia y conociendo diferentes segmentos de mercado, contamos con productos y soluciones que se ajustan a tus necesidades de negocio y presupuesto
