--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 			<a href="index.html">INICIO</a>
 			</li>
 			<li>
-			<a href="portfolio-servicios.html">Servicios</a>
+			<a href="portfolio-servicios.html">Servicios 1</a>
 			</li>
 			<li>
-			<a href="pag-servios.html">Productos</a>
+			<a href="pag-servios.html">Productos1</a>
 			</li>
 			<li>
-			<a href="contact.html">Contactenos</a>
+			<a href="contact.html">Contactenos1</a>
 			</li>
 		</ul>
 	</div>
